--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
     --first-color: #0057a4;
     --second-color: #ffdb01;
     --warning-color: rgba(255, 165, 0, 1);
+    --_1000-color: #67e167;
+    --_2000-color: #a96cce;
+    --_3000-color: #ffcc68;
     --height-title: 10%;
     --height-data: 90%;
     --height-total: 100%;
@@ -153,36 +156,117 @@ h1 {
     padding: 0.5em;
 }
 
+/* ***** SECTIONS AND CONTENT ***** */
+
 div.content {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /* flex-direction: column; */
+    flex-direction: row;
+    /* justify-content: center; */
+    justify-content: space-around;
     align-items: center;
     height: 100%;
     overflow-y: auto;
 }
 
 div.content div.element {
-    padding: 0 0.5em;
-    background-color: lemonchiffon;
+    /* padding: 0 0.5em; */
+    /* background-color: lemonchiffon; */
     
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: aquamarine;
-}
+    /* ***** SECTIONS AND CONTENT END - Shipments Table ***** */
 
-table tr td {
-    padding: 0.2em;
-    border: 1px solid gray;
-    background-color: beige;
-}
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        background-color: var(--background);
+    }
+
+    table tr th {
+        background-color: var(--first-color);
+        color: var(--second-color);
+        font-weight: bold;
+        padding: 0.5em;
+        /* border-top-right-radius: 4px; */
+        /* border-top-left-radius: 4px; */
+    }
+
+    table tbody#shipments tr:hover {
+        background-color: var(--second-color);
+    }
+
+    table tbody#shipments tr td {
+        padding: 0 0.2em;
+        border: 1px solid gray;
+    }
+    
+    table tbody#shipments tr td.selection  {
+        background-color: var(--background);
+        cursor: pointer;
+        padding: 0;
+    }
+    
+    table tbody#shipments tr:hover td.selection  {
+        background-color: var(--background);
+    }
+    
+    table tbody#shipments tr td.selection label {
+        text-align: center;
+        display: block;
+        height: 100%;
+    }
+    
+    table tbody#shipments tr td.selection label i {
+        font-size: 1.2em;
+        line-height: 1.5em;
+        color: var(--first-color);
+    }
+
+    table tbody#shipments tr td.selection input[type='checkbox']:checked + label {
+        background-color: var(--first-color);
+    }
+    
+    table tbody#shipments tr td.selection input[type='checkbox']:checked + label i {
+        color: var(--second-color);
+    }
+
+    table tbody#shipments tr.plants {
+        background-color: var(--warning-color);
+    }
+
+    /* ***** SECTIONS AND CONTENT END - Shipments Commands ***** */
+
+
+    div.content div.element div.shipments-commands {
+        padding: 0.2em;
+    }
+    
+    div.content div.element div.shipments-commands p {
+        margin-bottom: 0.3em;
+    }
+
+    div.content div.element div.shipments-commands fieldset  {
+        border: 2px solid var(--first-color);
+    }
+    
+    ._1000 {
+        background-color: var(--_1000-color);
+        color: black;
+    }
+    
+    ._2000 {
+        background-color: var(--_2000-color);
+        color: black;
+    }
+    
+    ._3000 {
+        background-color: var(--_3000-color);
+        color: black;
+    }
 
 
 
-div.content textarea {
-    /* width: 20em; */
-    /* height: 10em; */
-}
+
+/* ***** SECTIONS AND CONTENT END ***** */
+
