--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@
     display: none !important;
 }
 
+.height-100 {
+    height: 100%;
+}
+
 .show-print{
     display: none;
 }
@@ -70,7 +74,6 @@ div.container-title {
 }
 
 div.start-panel {
-	/* background-color: lightgoldenrodyellow; */
 	height: var(--height-data);
 }
 
@@ -156,6 +159,7 @@ h1 {
 /* ***** SECTIONS AND CONTENT ***** */
 
 div.content {
+    background-color: blanchedalmond;
     display: flex;
     /* flex-direction: column; */
     flex-direction: row;
@@ -291,12 +295,10 @@ div.content div.element {
 
     div.element div.card div h3 {
         font-size: 1.17em;
-        /* background-color: salmon; */
         padding: 0.3em 0;
     }
 
     div.element div.card div.card-content {
-        /* background-color: orange; */
         height: 100%;
         display: flex;
         flex-direction: row;
@@ -316,10 +318,18 @@ div.content div.element {
 
 /* ***** 2th PART REPORT CONTENT - Panel frame ***** */
 
+    div#report-frame {
+        /* background-color: salmon; */
+        display: flex;
+        z-index: 5;
+        width: 100%;
+        height: 100%;
+    }
+
     /* close button :right up corner */
     div#report-frame div.close-report-frame {
         position: absolute;
-        top: 3em;
+        top: 7em;
         right: 3em;
     }
 
@@ -365,33 +375,31 @@ div.content div.element {
     /* ***** 2th PART REPORT CONTENT - Results Panel ***** */
 
     div#report-frame div.report-panel {
-        /* background-color: slategray; */
-        position: relative;
-        /* max-width: 90%; */
-        margin : auto;
-        top: 50%;
-        padding: 0.5rem ;
-        border-radius: 5px;
-        transform: translate(-0%, -50%);
-        -webkit-transform: translate(-0%, -50%);
+        background-color: purple;
+        padding: 1em;
+        width: 50%;
+        margin: auto;
+        height: 100%;
     }
     
+    div#report-frame div.report-panel {
+        overflow-y: scroll;
+    }
+
     /* ***** 2th PART REPORT CONTENT - Results Panel END ***** */
     
     /* ***** 2th PART REPORT CONTENT - Packing list Panel ***** */
     
-    div#report-frame div#packing-list-panel {
-        background-color: red;
-        width: 50%;
-        overflow-y: scroll;
-    }
     
     /* ***** 2th PART REPORT CONTENT - Report Panel ***** */
 
     div#report-frame div#report-panel {
-        background-color: orange;
+        /* background-color: orange; */
         width: 95%;
         overflow: auto;
     }
+
+
+
 /* ***** 2th PART REPORT CONTENT END ***** */
 
