--- a/styles.css
+++ b/styles.css
@@ -329,7 +329,7 @@ div.content div.element {
     /* close button :right up corner */
     div#report-frame div.close-report-frame {
         position: absolute;
-        top: 7em;
+        top: 2.5em;
         right: 3em;
     }
 
@@ -375,17 +375,14 @@ div.content div.element {
     /* ***** 2th PART REPORT CONTENT - Results Panel ***** */
 
     div#report-frame div.report-panel {
-        background-color: purple;
-        padding: 1em;
-        width: 50%;
+        /* background-color: goldenrod; */
+        /* padding: 0 1em; */
+        width: 95%;
         margin: auto;
         height: 100%;
-    }
-    
-    div#report-frame div.report-panel {
         overflow-y: scroll;
     }
-
+    
     /* ***** 2th PART REPORT CONTENT - Results Panel END ***** */
     
     /* ***** 2th PART REPORT CONTENT - Packing list Panel ***** */
@@ -393,13 +390,17 @@ div.content div.element {
     
     /* ***** 2th PART REPORT CONTENT - Report Panel ***** */
 
-    div#report-frame div#report-panel {
-        /* background-color: orange; */
-        width: 95%;
-        overflow: auto;
+    table thead#report-table-headers tr {
+        /* position: sticky; */
     }
 
-
+    table tbody#report-data tr:nth-last-of-type(2n+0) {
+        background-color: lightgray;
+    }
+    
+    table tbody#report-data tr td {
+        padding: 0 0.1em;
+    }
 
 /* ***** 2th PART REPORT CONTENT END ***** */
 
