--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@
     display: none !important;
 }
 
+.block {
+    display: block;
+}
+
 .height-100 {
     height: 100%;
 }
@@ -143,11 +147,19 @@ h1 {
     padding: 0.5em 0.5em 0 0.5em;
 }
 
-h6.version {
+h5.version {
     text-align: right;
     padding: 0 1em;
     font-weight: lighter;
-    font-size: 0.7em;
+    /* font-size: 0.7em; */
+}
+
+.contact {
+    text-align: right;
+    text-decoration: none;
+    color: gray;
+    font-style: italic;
+    font-size: 0.8em;
 }
 
 /* ***** SECTIONS AND CONTENT ***** */
